--- a/index.html
+++ b/index.html
@@ -213,3 +213,5 @@ function keyUpHandle(event){
 }
 document.body.addEventListener('keyup', keyUpHandle)
   </script>
+
+<style src = index.css></style>
